# tinymath

./: README.md  pyproject.toml
src/: vector.py
tinymath/: __init__.py  vector.py
